# skyctl

./: .gitignore  .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/image/: Dockerfile  Makefile  rustup_wrapper.sh
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml
docs/: Building.md
scripts/: copy-assets.cjs  fetch-engine-assets.js  fix_macos_dylibs.sh
src/: ASIAirMainView.vue  App copy.vue  App.vue  HistogramOverlay.vue  HomeView.vue  ImageViewer.vue  ObjectivesView.vue  SeeStarMainView.vue  SettingsView.vue  StellariumView.vue  TelescopesView copy.vue  TelescopesView.vue  Weather.vue  date-extensions.ts  main.ts  shims-date.d.ts  store.ts  stores.ts  test.html  types.ts  utils.ts  wasm.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  Tauri.macos.toml  Tauri.toml  build.rs  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asiairdiscovery.rs  corelocation.rs  debayer.rs  downsample.rs  lib.rs  main.rs  rawimage.rs  stf.rs  stretch.rs
src-tauri/src/asiair/: camera_cmds.rs  discovery.rs  mod.rs
src-tauri/src/rawimage/: debayer.rs  downsample.rs  mod.rs  stf.rs
src/asiair-components/: ASIAirMainView.vue  CameraMenu.vue  EAFMenu.vue  EFWMenu.vue  ExposureSelector.vue  GuideMenu.vue  ImageViewer.vue  InfoMenu.vue  LeftPanel.vue  MenuBar.vue  MountMenu.vue  RigthPanel.vue  RotatorMenu.vue  SettingsMenu.vue  Shutter.vue  StatusBar.vue  StorageMenu.vue  TelescopeControl.vue  useASIAirController.ts
src/assets/: sw_helpers.d.ts  (+1 more)
(+17 files in other folders)
