[package]
name = "skyctl"
version = "0.1.0"
description = "Sky Control"
authors = ["Diego Dompe"]
edition = "2021"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skyctl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }
pkg-config = "0.3"

[dependencies]
tauri = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.0.0"
embed_plist = "1.2"
tauri-plugin-log = "2"
log = "0.4"
once_cell = "1.19"
ndarray = { version = "0.15", features = ["rayon"] }
image = "0.25"
base64 = "0.22"
rayon = "1.10.0"
lazy_static = "1.5.0"
fitsrs = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-foundation = "0.3.0"
objc2-core-location = { version = "0.3.0", features = ["CLLocation", "CLLocationManager", "CLLocationManagerDelegate"] }
